--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">iCoder</a>
+      <a class="navbar-brand" href="/iCoderBootstrap/">iCoder</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -37,12 +37,12 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/"
+            <a class="nav-link" href="/iCoderBootstrap/"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="/iCoderBootstrap/about.html">About</a>
           </li>
           <li class="nav-item dropdown">
             <a
@@ -66,8 +66,8 @@
               <a class="dropdown-item" href="#">Write for us</a>
             </div>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="/contact.html">Contact Us</a>
+          <li class="nav-item">
+            <a class="nav-link" href="/iCoderBootstrap/contact.html">Contact Us</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
